community/objects/Time_Type__c.object
<CustomObject>
    <fields>
        <fullName>Functions__c</fullName>
        <label>Functions</label>
        <picklist>
            <picklistValues>
                <fullName>Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPN: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RN: Non-Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor: Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payor: Non-Clinical</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OT_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OT Exempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orientation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Functions__c</columns>
        <columns>OT_Exempt__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Time Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>